--- a/custom_extension/views/intermediate_report_views.xml
+++ b/custom_extension/views/intermediate_report_views.xml
@@ -1,17 +1,5 @@
 <odoo>
     <data>
-<!--        <record id="view_intermediate_report_tree" model="ir.ui.view">-->
-<!--            <field name="name">intermediate.report.tree</field>-->
-<!--            <field name="model">intermediate.report</field>-->
-<!--            <field name="arch" type="xml">-->
-<!--                <tree edit="true">-->
-<!--                    <field name="company_id" />-->
-<!--                    <field name="location_id" />-->
-<!--                    <field name="begin_date" />-->
-<!--                    <field name="last_date" />-->
-<!--                </tree>-->
-<!--            </field>-->
-<!--        </record>-->
 
         <!-- Form view for Intermediate Report -->
         <record id="view_intermediate_report_form" model="ir.ui.view">
@@ -22,7 +10,7 @@
                     <!-- Body -->
 
                     <group>
-                        <field name="company_id" />
+                        <field name="company_id" readonly="1"/>
                         <field name="location_id" required="1"/>
                         <field name="begin_date" />
                         <field name="last_date" />
